# rust_os

./: Cargo.toml  README.md
src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
