[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"
authors = [
    "Anderson Rezende <andersonrezende17@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"      # Necessário para evitar otimizações erroneas do compilador
spin = "0.5.2"          # Necessário para evitar problemas de concorrência (buffer vga). Bloqueia o uso do item até ele estar disponível

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# As seguintes linhas desabilitam o eh_personality Item de Linguagem
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"